--- a/src/main.css
+++ b/src/main.css
@@ -19,13 +19,15 @@ body{
 
 .container{
     padding: 0 20px 50px 20px;
+
 }
 
 .calculator{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    min-height: 100vh;
+    min-height: calc(100vh - 50px);
+    height: 100%;
     
 }
 
@@ -57,20 +59,94 @@ body{
     grid-auto-columns: 1fr; 
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(2, 1fr) 0fr repeat(2, 1fr); 
-    gap: 0px 0px; 
+    gap: 20px 20px; 
+    width: 100%;
+    height: 425px;
     align-content: center;
 }
 
 .value-item{
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 70px;
+    width: 100%;
     min-height: 70px;
-    width: calc(100% / 4 - 20px)
+    /* width: calc(100% / 4 - 20px); */
     text-align: center;
-    margin-left: 20px;
-    margin-top: 20px;
-
+    /* margin-left: 20px;
+    margin-top: 20px; */
+    color: #848484;
+    font-size: 40px;
+    line-height: 1.2;
+    background-color: transparent;
+    border: none;
     box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.25), 
                 -5px -5px 10px rgba(51, 51, 51, 0.25), 
                 inset -3px -3px 10px rgba(49, 49, 49, 0.25);
+
+    border-radius: 50px;
+}
+
+.value-item:nth-child(7){
+    flex-direction: column;
+}
+
+.value-item:nth-child(17){
+    justify-content: left;
+    padding-left: 22px;
+}
+
+.value-span{
+
+}
+
+
+/* GRIDS-ITEMS */
+
+
+
+.seven { grid-area: 2 / 1 / 3 / 2; }
+.four { grid-area: 3 / 1 / 4 / 2; }
+.one { grid-area: 4 / 1 / 5 / 2; }
+.two { grid-area: 4 / 2 / 5 / 3; }
+.three { grid-area: 4 / 3 / 5 / 4; }
+.five { grid-area: 3 / 2 / 4 / 3; }
+.six { grid-area: 3 / 3 / 4 / 4; }
+.eight { grid-area: 2 / 2 / 3 / 3; }
+.nine { grid-area: 2 / 3 / 3 / 4; }
+
+.minus { 
+    grid-area: 1 / 4 / 2 / 5;
+    color: #48BDFF;
+}
+.dot { 
+    grid-area: 5 / 3 / 6 / 4;
+}
+.delete { 
+    grid-area: 1 / 1 / 2 / 2;
+    color: #FFA048;
+    font-size: 22px;
+    line-height: 1.18;
+}
+.percent { 
+    grid-area: 1 / 2 / 2 / 3;
+    color: #48BDFF;
+}
+.multiplication { 
+    grid-area: 1 / 3 / 2 / 4;
+    color: #48BDFF;
+}
+.plus { 
+    grid-area: 2 / 4 / 4 / 5;
+    color: #48BDFF;
+}
+.total { 
+    grid-area: 4 / 4 / 6 / 5; 
+    color: #FFA048;
+}
+.zero { grid-area: 5 / 1 / 6 / 3; 
+    width: auto;
+    min-width: 70px;
+    max-width: 100%;
 }
