--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 body{
     margin: 0;
-    
+
     background: linear-gradient(#212121, #212121);
     font-family: 'SF Pro Display', sans-serif;
     font-weight: 400;
@@ -69,13 +69,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 70px;
+    min-width: 60px;
     width: 100%;
     min-height: 70px;
-    /* width: calc(100% / 4 - 20px); */
-    text-align: center;
-    /* margin-left: 20px;
-    margin-top: 20px; */
+
     color: #848484;
     font-size: 40px;
     line-height: 1.2;
@@ -88,8 +85,22 @@ body{
     border-radius: 50px;
 }
 
-.value-item:nth-child(7){
+
+
+.value-item:nth-child(1){
     flex-direction: column;
+}
+.value-item:nth-child(1):hover,
+.value-item:nth-child(15):hover{
+    color: #ffa0486c;
+    border-color: #ffa0486c;
+}
+
+.value-item:nth-child(2):hover,
+.value-item:nth-child(3):hover,
+.value-item:nth-child(4):hover,
+.value-item:nth-child(8):hover{
+    color: #48bcffa4;
 }
 
 .value-item:nth-child(17){
@@ -97,10 +108,18 @@ body{
     padding-left: 22px;
 }
 
-.value-span{
-
+.value-item:hover{
+    background-color: #212121a1;
+    color: #84848450;
+    box-shadow: 10px 5px 12px rgba(0, 0, 0, 0.25), 
+                -5px -5px 10px rgba(51, 51, 51, 0.25), 
+                inset -3px -3px 10px rgba(49, 49, 49, 0.25);
 }
 
+
+/* .value-item-container{
+
+} */
 
 /* GRIDS-ITEMS */
 
@@ -129,7 +148,7 @@ body{
     font-size: 22px;
     line-height: 1.18;
 }
-.percent { 
+.divide { 
     grid-area: 1 / 2 / 2 / 3;
     color: #48BDFF;
 }
@@ -150,3 +169,11 @@ body{
     min-width: 70px;
     max-width: 100%;
 }
+
+.delete hr{
+    padding: 0;
+    margin: 0;
+    width: 50px;
+    border-color: #FFA048;
+}
+
